Bad repaints on twitter when the tile cache has a margin https://bugs.webkit.org/show_bug.cgi?id=125263 -and corresponding- <rdar://problem/15576884>

Reviewed by Tim Horton.

When tiles that used to be margin tiles become real-content tiles, they need to be
invalidated.

Two new helper functions will make it so that we don’t have to manually factor out
the margin from the bounds in more than one place in the code.
* platform/graphics/ca/mac/TileController.h:
* platform/graphics/ca/mac/TileController.mm:
(WebCore::TileController::boundsWithoutMargin):
(WebCore::TileController::boundsAtLastRevalidateWithoutMargin):

 Here is one existing place where we used to factor out the margin, but now we can
call boundsWithoutMargin().
(WebCore::TileController::adjustRectAtTileIndexForMargin):

And here is where we invalidate the formerly-margin tiles.
(WebCore::TileController::revalidateTiles):



Canonical link: https://commits.webkit.org/143402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160179 268f45cc-cd09-0410-ab3c-d52691b4dbfc